fix: wrap tab list on small screens (#213)

--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -19,6 +19,7 @@
 
     .yfm-tab-list {
         display: flex;
+        flex-wrap: wrap;
         margin-bottom: 15px;
 
         border-bottom: 1px solid $borderColor;
